// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<View
  accessibilityLabel="Video Splash"
  testID="splash-component"
>
  <Image
    uri="b9a31d3949b1882a09ed2f8508d538f3"
  />
  <View>
    <View>
      <Svg
        height={70}
        viewBox="0 0 100 100"
        width={70}
      >
        <Rect
          fill="#000000"
          fillOpacity="0.4"
          height="100"
          width="100"
          x="0"
          y="0"
        />
        <Rect
          height="100"
          stroke="#FFFFFF"
          strokeWidth="8"
          width="100"
          x="0"
          y="0"
        />
        <Polygon
          fill="#FFFFFF"
          points="30,20 70,50 30,80"
        />
      </Svg>
    </View>
  </View>
</View>
`;

exports[`2. video without a poster image 1`] = `
<View
  accessibilityLabel="Video Splash"
  testID="splash-component"
>
  <View />
  <View>
    <View>
      <Svg
        height={70}
        viewBox="0 0 100 100"
        width={70}
      >
        <Rect
          fill="#000000"
          fillOpacity="0.4"
          height="100"
          width="100"
          x="0"
          y="0"
        />
        <Rect
          height="100"
          stroke="#FFFFFF"
          strokeWidth="8"
          width="100"
          x="0"
          y="0"
        />
        <Polygon
          fill="#FFFFFF"
          points="30,20 70,50 30,80"
        />
      </Svg>
    </View>
  </View>
</View>
`;
